--- a/templates/i.html
+++ b/templates/i.html
@@ -34,7 +34,7 @@
 
         <!-- Batch -->
         <div class="batch-panel hidden" data-type="provider">
-          <p>Upload CSV or JSON. Required fields: <strong>is_inpatient, is_groupcode, ChronicCond_rheumatoidarthritis, Beneficiaries_Count, DeductibleAmtPaid, InscClaimAmtReimbursed, ChronicCond_Alzheimer, ChronicCond_IschemicHeart, Days_Admitted, ChronicCond_stroke</strong></p>
+          <p>Upload CSV or JSON. </strong></p>
           <input type="file" id="provider_batch_file" />
           <button id="provider_batch_analyze">Analyse</button>
           <div id="provider_batch_result" class="result"></div>
@@ -71,7 +71,7 @@
 
         <!-- Batch -->
         <div class="batch-panel hidden" data-type="claim">
-          <p>Upload CSV or JSON. Required fields: <strong>Total_Claims_Per_Bene, TimeInHptal, Provider_Claim_Frequency, ChronicCond_stroke_Yes, DeductibleAmtPaid, OPD_Flag_Yes, Diagnosis_Count, ChronicDisease_Count, Age</strong></p>
+          <p>Upload CSV or JSON. </strong></p>
           <input type="file" id="claim_batch_file" />
           <button id="claim_batch_analyze">Analyse</button>
           <div id="claim_batch_result" class="result"></div>
