--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url('/static/images/back.jpg') no-repeat center center fixed;
+    background: url('/static/images/background.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
